<?xml version="1.0" encoding="utf-8"?>
<!-- Using Constraint Layout here because it's easy to align all the objects since it's
not that many
-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alex.shoestore.instructions.InstructionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instructionsFragment"
        android:background="@drawable/checkered_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructionsText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="179dp"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="174dp"
            android:text="@string/instructions2"
            style="@style/TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionsText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="181dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="172dp"
            android:text="@string/instructions3"
            style="@style/TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsText1" />

        <Button
            android:id="@+id/navToShoeListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="198dp"
            android:text="@string/go_to_list"
            style="@style/Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsText2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>