<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alex.shoestore.shoe.ShoeDetailFragment">

    <data>
        <variable
            name="shoeViewModel"
            type="com.alex.shoestore.models.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoeDetailConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoeNameTExt"
            android:layout_width="127dp"
            android:layout_height="39dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="108dp"
            android:text="@string/shoe_name"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/companyNameText"
            android:layout_width="131dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:text="@string/company_name"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameTExt" />

        <TextView
            android:id="@+id/shoeSizeText"
            android:layout_width="127dp"
            android:layout_height="42dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="56dp"
            android:text="@string/shoe_size"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyNameText" />

        <TextView
            android:id="@+id/descripText"
            android:layout_width="130dp"
            android:layout_height="39dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="44dp"
            android:text="@string/shoe_info"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeText" />

        <EditText
            android:id="@+id/shoeNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="37dp"
            android:ems="10"
            android:inputType="text"
            android:text="shoeName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toEndOf="@+id/shoeNameTExt"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/companyNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="37dp"
            android:ems="10"
            android:inputType="text"
            android:text="companyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toEndOf="@+id/companyNameText"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameInput" />

        <EditText
            android:id="@+id/shoeSizeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="29dp"
            android:ems="10"
            android:inputType="number"
            android:text="10.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toEndOf="@+id/shoeSizeText"
            app:layout_constraintTop_toBottomOf="@+id/companyNameInput" />

        <EditText
            android:id="@+id/shoeInfoInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="265dp"
            android:ems="10"
            android:inputType="text"
            android:text="shoeInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toEndOf="@+id/descripText"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeInput"
            app:layout_constraintVertical_bias="0.486" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="31dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripText"
            app:layout_constraintVertical_bias="0.719" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginBottom="96dp"
            android:text="@string/save"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>